--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@jup-ag/api": "^6.0.44",
-    "@orca-so/common-sdk": "^0.6.11",
-    "@orca-so/whirlpools-sdk": "^0.16.0",
+    "@prisma/client": "^6.17.0",
     "@raydium-io/raydium-sdk-v2": "^0.2.29-alpha",
     "@solana/spl-token": "^0.4.14",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "buffer": "^6.0.3",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -38,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "prisma": "^6.17.0",
     "tailwindcss": "^3.4.1",
     "vite": "^7.1.7"
   }
